2015-10-28  Florian Weimer  <fweimer@redhat.com>

	[BZ# 19048]
	* malloc/malloc.c (struct malloc_state): Update comment.  Add
	attached_threads member.
	(main_arena): Initialize attached_threads.
	* malloc/arena.c (list_lock): Update comment.
	(ptmalloc_lock_all, ptmalloc_unlock_all): Likewise.
	(ptmalloc_unlock_all2): Reinitialize arena reference counts.
	(deattach_arena): New function.
	(_int_new_arena): Initialize arena reference count and deattach
	replaced arena.
	(get_free_list, reused_arena): Update reference count and deattach
	replaced arena.
	(arena_thread_freeres): Update arena reference count and only put
	unreferenced arenas on the free list.

2015-10-17  Florian Weimer  <fweimer@redhat.com>

	malloc: Rewrite with explicit TLS access using __thread.
	* sysdeps/generic/malloc-machine.h (tsd_key_t, tsd_key_create)
	(tsd_setspecific, tsd_getspecific): Remove.
	* sysdeps/mach/hurd/malloc-machine.h (tsd_key_t, tsd_key_create)
	(tsd_setspecific, tsd_getspecific): Likewise.
	* sysdeps/nptl/malloc-machine.h (tsd_key_t, tsd_key_create)
	(tsd_setspecific, tsd_getspecific): Likewise.
	* malloc/arena.c (thread_arena): New TLS variable.
	(arena_key): Remove variable.
	(arena_get): Use thread_arena.
	(arena_lookup): Remove macro.
	(malloc_atfork, free_atfork, ptmalloc_lock_all)
	(ptmalloc_unlock_all, ptmalloc_unlock_all2, ptmalloc_init)
	(_int_new_arena, get_free_list, reused_arena)
	(arena_thread_freeres): Use thread_arena.
	* manual/memory.texi (Basic Allocation): Remove arena_lookup,
	tsd_getspecific, tsd_setspecific from safety annotations.
	(Allocating Cleared Space): Remove arena_lookup from safety
	annotations.

2015-02-18  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* malloc/malloc.c (__libc_malloc): Consolidate arena_lookup and
	arena_lock into a single arena_get.

2015-05-22  Roland McGrath  <roland@hack.frob.com>

	* nptl/nptl-init.c (__pthread_initialize_minimal_internal):
	Use a separate INTERNAL_SYSCALL_DECL (err); in a local scope